# class-arrange

./: .gitignore  LICENSE  LICENSE.md  MAINTENANCE.md  README.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts  vitest.config.ts  全校开课查询结果 - 2026年秋季学期.xlsx
.github/workflows/: deploy.yml
.superpowers/sdd/: current-course-info-fixes-report.md  task-1-2-report.md  task-3-6-report.md  task-4-report.md  task-7-8-report.md
catalog_spider/: README.md  __main__.py  client.py  course_updates.py  details.py  lesson_sync.py  lesson_transform.py  paths.py  process.py  semester_calendar.py  tree.py
catalog_spider/tests/: test_client.py  test_course_updates.py  test_details.py  test_lesson_sync.py  test_lesson_transform.py  test_process.py  test_tree.py
icourse_spider/: course_rating.json  lesson_match.py  spider.py
scripts/: curricula_to_ts.py  excel_to_ts.py  ratings_to_ts.py  sync_semester_courses.ps1
src/: App.tsx  index.css  main.tsx
src/components/: AppDataState.css  AppDataState.tsx  ArrangementPanel.test.ts  ArrangementPanel.tsx  BottomModal.tsx  BottomModalInteraction.test.ts  CalculationModePicker.tsx  CalculationStatus.test.ts  CalculationStatus.tsx  ContributorList.test.ts  ContributorList.tsx  CourseDescriptionPanel.test.ts  CourseDescriptionPanel.tsx  CourseDetailLayout.test.ts  CourseDetailModal.tsx  CourseDetailModalOrder.test.ts  CourseMetadata.test.ts  CoursePool.tsx  CoursePoolItem.tsx  CoursePoolMerge.test.ts  CourseTable.tsx  CourseTableCell.tsx  CourseTablePrecision.test.ts  CourseUpdateBatchDetails.tsx  FavoriteButton.tsx  (+32 more)
(+972 files in other folders)
