[project]
name = "class-arrange"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "requests>=2.32",
    "tqdm>=4.66",
]
# 给 icourse_spider/spider.py 用：sync 时 `uv sync --group spider`
spider = [
    "requests>=2.32",
    "tqdm>=4.66",
]
